# smart_research_assistant

./: README.md  app.py  config.py  main.py  pyproject.toml
agents/: agent_tools.py  linkedin_lookup.py  output_parsers.py
chains/: llm_chain.py  output_parsers.py  tools.py
data/: linkedin_scrap.py
static/: index.js  style.css
templates/: index.html
