[project]
name = "langchain_demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.5",
    "langchain-tavily>=0.2.7",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
